{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 16,
  "lineage": "fe982079-5b91-8419-b002-5688a41f234f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:internet-gateway/igw-005a944f99264c913",
            "id": "igw-005a944f99264c913",
            "owner_id": "146040387664",
            "region": "us-west-2",
            "tags": {
              "Managed_by": "terraform",
              "Name": "demo-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:route-table/rtb-024b863071727e48d",
            "id": "rtb-024b863071727e48d",
            "owner_id": "146040387664",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "demo-private-rt1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "demo-private-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:route-table/rtb-0f71c215ec32bae0c",
            "id": "rtb-0f71c215ec32bae0c",
            "owner_id": "146040387664",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005a944f99264c913",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Name": "demo-public-rt1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "demo-public-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rt1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b902b89e7680bb1",
            "region": "us-west-2",
            "route_table_id": "rtb-024b863071727e48d",
            "subnet_id": "subnet-03bd70914662fa32d"
          },
          "dependencies": [
            "aws_route_table.pri_rt1",
            "aws_subnet.pri_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc08a8f0e4806516",
            "region": "us-west-2",
            "route_table_id": "rtb-0f71c215ec32bae0c",
            "subnet_id": "subnet-03a984423a819c902"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.pub_rt1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:security-group/sg-04b0588bf898e4d80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b0588bf898e4d80",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.10.11.0/24",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demo-sg1",
            "name_prefix": "",
            "owner_id": "146040387664",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-sg1"
            },
            "tags_all": {
              "Name": "demo-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:subnet/subnet-03bd70914662fa32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bd70914662fa32d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146040387664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Managed_by": "terraform",
              "Name": "demo-private-subnet"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "demo-private-subnet"
            },
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:subnet/subnet-03a984423a819c902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a984423a819c902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "146040387664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Managed_by": "terraform",
              "Name": "demo-public-subnet"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "demo-public-subnet"
            },
            "vpc_id": "vpc-086b56e0af93472be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:146040387664:vpc/vpc-086b56e0af93472be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c675fceff4dcf340",
            "default_route_table_id": "rtb-0851e2880f4a9ca0d",
            "default_security_group_id": "sg-0e67d42f6f896dfde",
            "dhcp_options_id": "dopt-04c29c20a261a5406",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086b56e0af93472be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0851e2880f4a9ca0d",
            "owner_id": "146040387664",
            "region": "us-west-2",
            "tags": {
              "Name": "demo-vpc",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "demo-vpc",
              "managed_by": "terraform"
            }
          }
        }
      ]
    }
  ]
}